правка: в классе фрагмента проверки знания слов вызовы метода toList(), не поддерживаемого минимальной версией Android SDK, заменены более старым, поддерживаемым аналогом